--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,6 @@
+<!--<script type="application/javascript">-->
+<!--  var global = window;-->
+<!--</script>-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,7 +15,7 @@
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
 
-  <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
+  <link rel="icon" type="image/png" href="assets/icon/favicon.ico" />
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
